syntax = "proto3";

package github.com.Balun_courses.microservices_like_in_bigtech.grpc_validate;

import "api/notes/messages.proto";

option go_package = "github.com/Balun-courses/microservices_like_in_bigtech/grpc_validate/pkg/api/notes;notes";


// NotesService - notes service
service NotesService {
  // SaveNote - save note
  rpc SaveNote(SaveNoteRequest) returns (SaveNoteResponse) {}
  // ListNotes - list all notes
  rpc ListNotes(ListNotesRequest) returns (ListNotesResponse) {}
}

